@@ -10,3 +10,5 @@ neiRecipeHandlers.versionChecker.notification.chat.part5=Neuerungen
 neiRecipeHandlers.versionChecker.notification.chat.part6=)
 neiRecipeHandlers.versionChecker.notification.chat.version.tooltip=Klicken, um die Downloadseite der neuen Version zu öffnen
 neiRecipeHandlers.versionChecker.notification.chat.changelog.tooltip=Klicken, um das Änderungslog im Browser anzusehen
+
+neiRecipeHandlers.handler.vanillaCrafting.name=Vanilla Handwerk
